# AetherRouter

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  config.toml
include/: serial.h  session.h  tcp_server.h  version.h.in
src/: aether_router.cc  serial.cc  tcp_server.cc
tools/cppcheck/: cppcheck.cmake  suppressions.xml
tools/hooks/: pre-commit
tools/uncrustify/: uncrustify.cmake
